--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mapbox-gl": "^2.13.0",
     "mapbox-gl-controls": "^2.3.5",
     "moment": "^2.29.4",
+    "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
     "next": "13.1.6",
     "next-connect": "^0.13.0",
